impl simple repl